(WIP feature) Filter list to fix websites rendering when Increase page contrast is enabled

--- a/src/css/content.less
+++ b/src/css/content.less
@@ -121,7 +121,7 @@
     .pageShadowContrastBlack@{name} .pageShadowHasBackgroundImg {
         background-color: transparent !important;
     }
-    .pageShadowContrastBlack@{name}.pageShadowBackgroundDetected .pageShadowHasHiddenElement, .pageShadowContrastBlack@{name}.pageShadowBackgroundDetected *.pageShadowHasHiddenElement > *:not(img):not(video):not(canvas):not(a):not(svg):not(select):not(ins):not(del):not(mark):not(yt-icon):not(.pageShadowHasBackgroundImg):not(.pageShadowHasHiddenElement):not(.pageShadowDisableStyling):not(.pageShadowElementDisabled), .pageShadowContrastBlack@{name}.pageShadowBackgroundDetected .pageShadowElementForceTransparent {
+    .pageShadowContrastBlack@{name}.pageShadowBackgroundDetected .pageShadowHasHiddenElement, .pageShadowContrastBlack@{name}.pageShadowBackgroundDetected *.pageShadowHasHiddenElement > *:not(img):not(video):not(canvas):not(a):not(svg):not(select):not(ins):not(del):not(mark):not(yt-icon):not(.pageShadowHasBackgroundImg):not(.pageShadowHasHiddenElement):not(.pageShadowDisableStyling):not(.pageShadowElementDisabled), .pageShadowContrastBlack@{name}.pageShadowBackgroundDetected *.pageShadowElementForceTransparentBackground, .pageShadowContrastBlack@{name}.pageShadowBackgroundDetected *.pageShadowElementForceTransparentBackground * {
         background: transparent !important;
     }
 }
@@ -167,7 +167,7 @@
 .pageShadowContrastBlackCustom .pageShadowHasBackgroundImg {
     background-color: transparent !important;
 }
-.pageShadowContrastBlackCustom.pageShadowBackgroundDetected .pageShadowHasHiddenElement, .pageShadowContrastBlackCustom.pageShadowBackgroundDetected *.pageShadowHasHiddenElement > *:not(img):not(video):not(canvas):not(a):not(svg):not(select):not(ins):not(del):not(mark):not(yt-icon):not(.pageShadowHasBackgroundImg):not(.pageShadowHasHiddenElement):not(.pageShadowDisableStyling):not(.pageShadowElementDisabled), .pageShadowContrastBlackCustom.pageShadowBackgroundDetected .pageShadowElementForceTransparent {
+.pageShadowContrastBlackCustom.pageShadowBackgroundDetected .pageShadowHasHiddenElement, .pageShadowContrastBlackCustom.pageShadowBackgroundDetected *.pageShadowHasHiddenElement > *:not(img):not(video):not(canvas):not(a):not(svg):not(select):not(ins):not(del):not(mark):not(yt-icon):not(.pageShadowHasBackgroundImg):not(.pageShadowHasHiddenElement):not(.pageShadowDisableStyling):not(.pageShadowElementDisabled), .pageShadowContrastBlackCustom.pageShadowBackgroundDetected *.pageShadowElementForceTransparentBackground, .pageShadowContrastBlackCustom.pageShadowBackgroundDetected *.pageShadowElementForceTransparentBackground * {
     background: transparent !important;
 }
 
